# fastly-inspect

./: Cargo.toml  LICENSE  Makefile  README.md  index.html  index.js
.github/workflows/: release.yml
fastly-pages/: Cargo.toml  README.md  fastly.toml
fastly-pages/src/: main.rs
fastly-pages/static/: index.html  static-server.js
fastly-pages/static/lib/: fastly_inspect.js  fastly_inspect_bg.wasm  index.js
src/: lib.rs  main.rs
vcl/: README.md  req_infos_error.vcl  req_infos_recv.vcl
vcl-snippets/: req-infos-error.vcl  req-infos-recv.vcl
