[package]
name = "fastly-inspect"
version = "0.1.0"
authors = ["Yann Hamon <yann@mandragor.org>"]
edition = "2021"

[[bin]]
name = "fastly-inspect"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fastly_inspect"

[dependencies]
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
http-types = "^2.12.0"
serde_json = "1.0"
rand = "0.8.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = {version = "2.3.2", default-features = false, features = ["wasm-client", "middleware-logger"] }
futures = "^0.3.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = {version = "2.3.2", features = ["middleware-logger"] }
futures = "^0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'Window',
]

