[package]
name = "fastly-pages"
version = "0.0.1"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.8.0"
rust-embed="6.2.0"
serde_json = "1.0"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
